--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     --almost-white: #FFFDFA;
     --dark-blue: #00001A;
     --gunmetal: #5E607A;
-    --vermillion: #F15051;
+    --vermillion: #F15D51;
     --yellow: #E9AA52;
     --silver: #C5C6CE;
 }
@@ -131,7 +131,7 @@ main {
 }
 
 .margin-border-padding {
-    border: 1px solid var(--gunmetal);
+    border-bottom: 1px solid var(--gunmetal);
     margin-bottom: 1.75rem;
     padding-bottom: 1.75rem;
 }
@@ -146,6 +146,7 @@ main {
 .segunda-secao h3 {
     color: var(--almost-white);
     font-size: 1.25rem;
+    line-height: 1.5rem;
     font-weight: 800;
     margin-bottom: 0.5rem;
 }
@@ -181,7 +182,7 @@ main {
     margin-block: 0.6rem;
 }
 
-.terceira-secao h2 {
+.terceira-secao a {
     text-decoration: none;
 }
 
@@ -204,7 +205,7 @@ main {
     header .desktop a {
         font-size: 0.9375rem;
         line-height: 1.625rem;
-        text-decoration: none ;
+        text-decoration: none;
         color: var(--gunmetal);
     }
 
@@ -218,7 +219,7 @@ main {
         gap: 1.75rem;
     }
 
-    .primeira-secao{
+    .primeira-secao {
         grid-column: 1 / 3;
 
         display: grid;
@@ -252,7 +253,7 @@ main {
         grid-column: 1 / 4;
     }
 
-    .terceira-secao h2:hover{
+    .terceira-secao h2:hover {
         color: var(--vermillion);
     }
 }
